# ocean-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.build.yaml  compose.yaml
.github/workflows/: docker-image.yaml
configs/: ocean.toml
src/: main.rs
src/ocean/: app.rs  config.rs  db.rs  trash_monitor.rs  watchdog.rs
src/ocean/api/: authorizer.rs  router.rs  server.rs
src/ocean/controller/: mod.rs  user.rs
src/ocean/controller/forum/: post.rs  section.rs
src/ocean/telegram_bot/: mod.rs
