[package]
name = "ocean"
version = "1.1.0"
authors = ["Vladimir Zarypov <krre31@gmail.com>"]
edition = "2024"

[lib]
name = "ocean"
path = "src/ocean/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_derive = "1.0.228"
dirs = "6.0.0"
hyper = { version = "1.9.0", features = ["full"] }
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["full"] }
tokio = { version = "1.51.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
diesel = { version = "2.3.7", features = ["postgres", "chrono", "serde_json"] }
diesel_migrations = "2.3.1"
chrono = { version = "0.4.44", features = ["serde"] }
sha1 = "0.11.0"
log = "0.4.29"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
url = "2.5.8"
pq-sys = { version = "0.7.5", features = ["bundled"] }
dotenvy = "0.15.7"
envy = "0.4.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
